# tag-tool-suite

./: README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/analysis/: patterns.py  recommender.py
src/ingest/: csv_importer.py
src/models/: ticket.py
src/store/: db.py
web/: app.py
web/templates/: base.html  index.html
web/templates/auth/: login.html
web/templates/hub/: index.html
web/templates/nrc/: index.html
