[project]
name = "nrc-ai"
version = "0.1.0"
description = "Noise Reduction Committee AI"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "psycopg2-binary>=2.9.9",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.2",
    "httpx>=0.27.0"
]

[tool.pyright]
extraPaths = ["."]
